checekbox for numeric value sample added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
   </head>
-  <body>     
-    <my-app>Loading AppComponent content here ...</my-app>
+  <body> 
+    <app-container>Loading AppComponent content here ...</app-container>
+   
     <script src="dist/app.js"></script>
   </body>
 </html>
